@@ -41,10 +41,10 @@
 
   :aliases {"sass" ["shell" "sass" "--watch" "-Isass/" "--sourcemap=file"
                     ~(clojure.core/format "sass/%s.sass:resources/public/css/web.css"
-                                          (or (System/getenv "WEBMAN_WEBSITE")
+                                          (or (System/getenv "BUIDERIEN_WEBSITE")
                                               "web"))]
             "sass-compile" ["shell" "sass" "-t compressed" ~(clojure.core/format "sass/%s.sass:resources/public/css/web.css"
-                                                                                 (or (System/getenv "WEBMAN_WEBSITE")
+                                                                                 (or (System/getenv "BUIDERIEN_WEBSITE")
                                                                                      "web"))]}
 
 
