@@ -20,7 +20,7 @@
 
 (defmacro get-config
   "Return the value of the given config `key` by reading the proper
-  configuration file of the current website (set in WEBMAN_WEBSITE)
+  configuration file of the current website (set in BUIDERIEN_WEBSITE)
   or if the key is missing it would return the value from `default.edn`
   "
   [key]
